Fix mobile menu spacing on first element

--- a/web/wp-content/themes/cncf-twenty-two/source/scss/core/_header.scss
+++ b/web/wp-content/themes/cncf-twenty-two/source/scss/core/_header.scss
@@ -247,12 +247,6 @@
 			background-color: $gray-200;
 			transition: background-color 0.25s ease-in-out;
 		}
-
-		.lf-menu-title + .menu-item {
-			a {
-				padding-top: 0;
-			}
-		}
 	}
 
 	.header-cta {
